[package]
name = "merkle_storage"
version = "0.1.0"
authors = ["fafk <patomil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "merkle_storage"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
im-rc = { version = "15.0.0", features = ["serde"] }
rocksdb = "0.14.0"
rust-crypto = "0.2.36"
lazy_static = "1.4.0"
failure = "0.1"
rayon = "1.3.1"

